--- a/games/style.css
+++ b/games/style.css
@@ -55,7 +55,7 @@ body {
   color: rgb(203, 203, 203);
   /* font-weight: bold; */
   background: black;
-  animation: bgFade 2s ease forwards 1s;
+  animation: bgFade 1s ease forwards 0.5s;
 }
 
 @keyframes bgFade{
@@ -81,7 +81,7 @@ a {
   display: flex;
   align-items: center;
   opacity: 0;
-  animation: fadeIn 1s forwards 1s ease;
+  animation: fadeIn 0.5s forwards 0.5s ease;
 }
 
 .tagline {
@@ -163,6 +163,11 @@ footer {
   text-align: center;
 }
 
+h1{
+  margin-top: -8px;
+  margin-bottom: 4px;
+}
+
 @media (max-width: 600px) {
   .content-container {
     flex-direction: column;
@@ -173,6 +178,7 @@ footer {
   }
 
   h1{
+    margin-top: 0;
     margin-bottom: 10px;
   }
 
