add old cv, update games and projects

--- a/games/style.css
+++ b/games/style.css
@@ -58,18 +58,31 @@ body {
   animation: bgFade 1s ease forwards 0.5s;
 }
 
-@keyframes bgFade{
-  from{
+@keyframes bgFade {
+  from {
     background: black;
   }
-  to{
+  to {
     background: rgb(9, 0, 44);
   }
-
 }
 
 h1 {
   color: rgb(229, 229, 229);
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 1.17em;
+  font-weight: bold;
+}
+
+small{
+    margin-top: 6px;
+    display: block;
 }
 
 a {
@@ -163,7 +176,7 @@ footer {
   text-align: center;
 }
 
-h1{
+h1 {
   margin-top: -8px;
   margin-bottom: 4px;
 }
@@ -177,7 +190,7 @@ h1{
     margin-bottom: 10px;
   }
 
-  h1{
+  h1 {
     margin-top: 0;
     margin-bottom: 10px;
   }
