--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 html,
 body {
   height: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 img,
 picture,
@@ -65,6 +66,12 @@ a {
   display: inline-block;
 }
 
+:focus{
+  outline: 2px dashed;
+  outline-offset: 2px;
+  border-radius: 4px;
+}
+
 .main-container {
   min-height: 95%;
   display: flex;
@@ -110,7 +117,7 @@ a,
 a.visited {
   color: inherit;
   text-decoration: none;
-  transition: all 1s ease;
+  transition: color 1s ease;
 }
 
 button {
@@ -146,7 +153,19 @@ footer {
   text-align: center;
 }
 
+
+#social-mobile{
+  display: none;
+}
+
 @media (max-width: 600px) {
+  #social{
+    display: none;
+  }
+  #social-mobile{
+    display: block;
+  }
+
   .content-container {
     flex-direction: column;
     max-width: 100%;
@@ -184,15 +203,8 @@ footer {
 
   li {
     margin: 8px 0px;
-    width: 100%;
   }
   
-
-  li a{
-    width: 100%;
-    display: block;
-  }
-
   .social-links li {
     list-style: none;
   }
